Tests + repo Strategy pattern finish + little sorting optimizations